<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">12xue学生HD</string>
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="dlog_password_message">The document is encrypted.</string>
    <string name="dlog_password_retry">Invalid password.</string>
    <string name="dlog_password_title">Password:</string>
    <string name="doodle_app_name">涂鸦</string>
    <string name="doodle_bottom">置底</string>
    <string name="doodle_cancel">取消</string>
    <string name="doodle_cant_undo_after_clearing">清屏后不可撤销</string>
    <string name="doodle_clear_screen">清屏</string>
    <string name="doodle_edit">编辑</string>
    <string name="doodle_edit_mode">编辑模式</string>
    <string name="doodle_enter">确定</string>
    <string name="doodle_remove">移除</string>
    <string name="doodle_saving_picture">保存图片</string>
    <string name="doodle_select_image">选择图片</string>
    <string name="doodle_top">置顶</string>
    <string name="enter_password">Enter Password</string>
    <string name="fnscanner_album">Album</string>
    <string name="fnscanner_flash_off">Touch your close</string>
    <string name="fnscanner_flash_on">Touch your light</string>
    <string name="link_control">Link highlighting and enabling</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="no_media_warning">Storage Media not present</string>
    <string name="open_failed">Unable to open document</string>
    <string name="outline_title">Table of Contents</string>
    <string name="picker_title">MuPDF</string>
    <string name="prompt">提示</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_document">Search document</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_menu_title">Search</string>
    <string name="searching_">Searching...</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="text_not_found">Text not found</string>
    <string name="text_search_hint">Search…</string>
    <string name="toast_search_not_found">Search not found.</string>
</resources>
