<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#dddddd" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="#ffffff" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="45.0dp">
            <TextView android:textSize="16.0dp" android:textColor="#000000" android:gravity="center_vertical" android:id="@id/btn_back" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="10.0dp" android:text="@string/doodle_cancel" />
            <TextView android:textSize="18.0dp" android:textStyle="normal" android:textColor="@android:color/black" android:gravity="center" android:layout_width="wrap_content" android:layout_height="45.0dp" android:text="@string/doodle_select_image" android:layout_centerInParent="true" />
            <TextView android:textSize="16.0dp" android:textStyle="normal" android:textColor="@android:color/black" android:gravity="center" android:id="@id/btn_enter" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="45.0dp" android:layout_marginRight="10.0dp" android:text="@string/doodle_enter" android:layout_alignParentRight="true" />
        </RelativeLayout>
    </RelativeLayout>
    <FrameLayout android:background="#aaaaaa" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <GridView android:id="@id/doodle_list_image" android:layout_width="match_parent" android:layout_height="match_parent" android:listSelector="@android:color/transparent" android:cacheColorHint="@android:color/transparent" android:horizontalSpacing="1.0dp" android:verticalSpacing="1.0dp" android:numColumns="3" android:layout_weight="1.0" />
</LinearLayout>
