<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:background="#232323" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <include android:id="@id/doodle_title_bar" layout="@layout/doodle_title_bar" />
        <FrameLayout android:id="@id/doodle_container" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@id/doodle_title_bar" />
        <RelativeLayout android:id="@id/doodle_panel" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@id/doodle_title_bar">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dp" android:layout_marginTop="5.0dp" android:layout_marginRight="5.0dp" android:layout_marginBottom="10.0dp">
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="@dimen/doodle_btn_pen_size">
                    <ImageView android:id="@id/btn_pen_hand" android:background="@drawable/doodle_btn_effect_round" android:visibility="visible" android:layout_width="@dimen/doodle_btn_pen_size" android:layout_height="@dimen/doodle_btn_pen_size" android:layout_marginRight="5.0dp" android:src="@drawable/doodle_ic_pen" android:scaleType="centerInside" android:onClick="onClick" />
                    <ImageView android:id="@id/btn_pen_copy" android:background="@drawable/doodle_btn_effect_round" android:visibility="visible" android:layout_width="@dimen/doodle_btn_pen_size" android:layout_height="@dimen/doodle_btn_pen_size" android:layout_marginRight="5.0dp" android:src="@drawable/doodle_ic_copy" android:scaleType="centerInside" android:onClick="onClick" />
                    <ImageView android:id="@id/btn_pen_eraser" android:background="@drawable/doodle_btn_effect_round" android:visibility="visible" android:layout_width="@dimen/doodle_btn_pen_size" android:layout_height="@dimen/doodle_btn_pen_size" android:layout_marginRight="5.0dp" android:src="@drawable/doodle_ic_eraser" android:scaleType="centerInside" android:onClick="onClick" />
                    <ImageView android:id="@id/btn_pen_text" android:background="@drawable/doodle_btn_effect_round" android:visibility="visible" android:layout_width="@dimen/doodle_btn_pen_size" android:layout_height="@dimen/doodle_btn_pen_size" android:layout_marginRight="5.0dp" android:src="@drawable/doodle_ic_text" android:scaleType="centerInside" android:onClick="onClick" />
                    <ImageView android:id="@id/btn_pen_bitmap" android:background="@drawable/doodle_btn_effect_round" android:visibility="visible" android:layout_width="@dimen/doodle_btn_pen_size" android:layout_height="@dimen/doodle_btn_pen_size" android:layout_marginRight="5.0dp" android:src="@drawable/doodle_ic_texture" android:scaleType="centerInside" android:onClick="onClick" />
                    <FrameLayout android:layout_width="wrap_content" android:layout_height="match_parent" android:minWidth="10.0dp" android:layout_weight="1.0" />
                    <ImageView android:id="@id/btn_clear" android:background="@drawable/doodle_btn_effect_round" android:visibility="gone" android:layout_width="@dimen/doodle_btn_pen_size" android:layout_height="@dimen/doodle_btn_pen_size" android:layout_marginRight="5.0dp" android:src="@drawable/doodle_ic_clear" android:scaleType="centerInside" android:onClick="onClick" />
                    <ImageView android:id="@id/btn_undo" android:background="@drawable/doodle_btn_effect_round" android:layout_width="@dimen/doodle_btn_pen_size" android:layout_height="@dimen/doodle_btn_pen_size" android:layout_marginRight="5.0dp" android:src="@drawable/doodle_ic_undo" android:scaleType="centerInside" android:onClick="onClick" />
                    <ImageView android:id="@id/btn_redo" android:background="@drawable/doodle_btn_effect_round" android:layout_width="@dimen/doodle_btn_pen_size" android:layout_height="@dimen/doodle_btn_pen_size" android:layout_marginRight="5.0dp" android:src="@drawable/doodle_ic_undo_white" android:scaleType="centerInside" android:onClick="onClick" />
                    <ImageView android:id="@id/btn_zoomer" android:background="@drawable/doodle_btn_effect_round" android:layout_width="@dimen/doodle_btn_pen_size" android:layout_height="@dimen/doodle_btn_pen_size" android:src="@drawable/doodle_ic_zoomer" android:scaleType="centerInside" android:onClick="onClick" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/bar_shape_mode" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_centerHorizontal="true">
                    <ImageView android:id="@id/btn_hand_write" android:background="@drawable/doodle_btn_effect_rect_line" android:layout_width="@dimen/doodle_btn_shape_size" android:layout_height="@dimen/doodle_btn_shape_size" android:layout_marginRight="5.0dp" android:src="@drawable/doodle_ic_handwrite" android:scaleType="centerInside" android:onClick="onClick" />
                    <ImageView android:id="@id/btn_arrow" android:background="@drawable/doodle_btn_effect_rect_line" android:layout_width="@dimen/doodle_btn_shape_size" android:layout_height="@dimen/doodle_btn_shape_size" android:layout_marginRight="5.0dp" android:src="@drawable/doodle_ic_arrow" android:scaleType="centerInside" android:onClick="onClick" />
                    <ImageView android:id="@id/btn_line" android:background="@drawable/doodle_btn_effect_rect_line" android:layout_width="@dimen/doodle_btn_shape_size" android:layout_height="@dimen/doodle_btn_shape_size" android:layout_marginRight="5.0dp" android:src="@drawable/doodle_ic_line" android:scaleType="centerInside" android:onClick="onClick" />
                    <ImageView android:id="@id/btn_holl_circle" android:background="@drawable/doodle_btn_effect_rect_line" android:layout_width="@dimen/doodle_btn_shape_size" android:layout_height="@dimen/doodle_btn_shape_size" android:layout_marginRight="5.0dp" android:src="@drawable/doodle_ic_hollow_circle" android:scaleType="centerInside" android:onClick="onClick" />
                    <ImageView android:id="@id/btn_fill_circle" android:background="@drawable/doodle_btn_effect_rect_line" android:layout_width="@dimen/doodle_btn_shape_size" android:layout_height="@dimen/doodle_btn_shape_size" android:layout_marginRight="5.0dp" android:src="@drawable/doodle_ic_fill_circle" android:scaleType="centerInside" android:onClick="onClick" />
                    <ImageView android:id="@id/btn_holl_rect" android:background="@drawable/doodle_btn_effect_rect_line" android:layout_width="@dimen/doodle_btn_shape_size" android:layout_height="@dimen/doodle_btn_shape_size" android:layout_marginRight="5.0dp" android:src="@drawable/doodle_ic_hollow_rect" android:scaleType="centerInside" android:onClick="onClick" />
                    <ImageView android:id="@id/btn_fill_rect" android:background="@drawable/doodle_btn_effect_rect_line" android:layout_width="@dimen/doodle_btn_shape_size" android:layout_height="@dimen/doodle_btn_shape_size" android:layout_marginRight="5.0dp" android:src="@drawable/doodle_ic_fill_rect" android:scaleType="centerInside" android:onClick="onClick" />
                    <Space android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0" />
                    <ImageView android:id="@id/doodle_btn_brush_edit" android:background="@drawable/doodle_btn_effect_round" android:padding="5.0dp" android:visibility="visible" android:layout_width="@dimen/doodle_btn_pen_size" android:layout_height="@dimen/doodle_btn_pen_size" android:src="@drawable/doodle_ic_move" android:scaleType="centerInside" android:onClick="onClick" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/doodle_color_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_centerHorizontal="true">
                    <FrameLayout android:id="@id/btn_set_color_container" android:background="@drawable/doodle_btn_effect_rect_line" android:padding="2.0dp" android:layout_width="30.0dp" android:layout_height="30.0dp" android:onClick="onClick">
                        <ImageView android:id="@id/btn_set_color" android:background="#f00" android:layout_width="match_parent" android:layout_height="match_parent" />
                    </FrameLayout>
                    <SeekBar android:id="@id/doodle_seekbar_size" android:paddingLeft="12.0dp" android:paddingRight="10.0dp" android:layout_width="260.0dp" android:layout_height="33.0dp" android:maxHeight="33.0dp" android:max="100" android:progressDrawable="@drawable/doodle_seekbar_bg" android:minHeight="33.0dp" android:thumb="@drawable/doodle_thumb_seekbarr" android:thumbOffset="0.0dp" />
                    <TextView android:textSize="14.0dp" android:textColor="#ffffff" android:layout_gravity="center_vertical" android:id="@id/paint_size_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dp" android:minWidth="40.0dp" android:text="" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/doodle_selectable_edit_container" android:background="#88000000" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/doodle_title_bar_height" android:layout_alignParentBottom="true">
                <TextView android:textSize="16.0dp" android:textColor="#ffffff" android:gravity="center" android:id="@id/doodle_selectable_edit" android:background="@drawable/doodle_btn_effect_rect_pressed_black" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/doodle_edit" android:layout_weight="1.0" android:onClick="onClick" />
                <TextView android:textSize="16.0dp" android:textColor="#ffffff" android:gravity="center" android:id="@id/doodle_selectable_bottom" android:background="@drawable/doodle_btn_effect_rect_pressed_black" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/doodle_bottom" android:layout_weight="1.0" android:onClick="onClick" />
                <TextView android:textSize="16.0dp" android:textColor="#ffffff" android:gravity="center" android:id="@id/doodle_selectable_top" android:background="@drawable/doodle_btn_effect_rect_pressed_black" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/doodle_top" android:layout_weight="1.0" android:onClick="onClick" />
                <TextView android:textSize="16.0dp" android:textColor="#ffffff" android:gravity="center" android:id="@id/doodle_selectable_remove" android:background="@drawable/doodle_btn_effect_rect_pressed_black" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/doodle_remove" android:layout_weight="1.0" android:onClick="onClick" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>
